--- a/src/Concerto/PanelBundle/Resources/translations/panel.tr_TR.yml
+++ b/src/Concerto/PanelBundle/Resources/translations/panel.tr_TR.yml
@@ -25,8 +25,13 @@ list:
     id: Id
     info: Bilgi
     updated.on: Son güncelleme
-    updated.by: Son güncelleme
+    updated.by: Son güncelleyen
     protected: Korumalı
+    type:Tür
+    exists: Varolan
+    action: Eylem
+    rename: Yeniden adlandır
+    safe: Güvenli
   edit: Düzenle
   delete: Sil
   export: Dışa aktar
@@ -63,6 +68,7 @@ dialog:
     failed: Çalıştırılamadı. Verinizi doğrulayın ve tekrar deneyin.
     saved: Nesne kaydedildi
     confirm.delete: Seçili nesne(leri) silmek istediğinizden emin misiniz?
+    confirm.unsafe_import: There are unsafe imports planned which might lead to data loss. It is strongly recommended to back up your database before continuing. Do you want to continue?
     leaving: Devam etmek istediğinizden emin misiniz? Kaydetmediğiniz veriler kaybolabilir.
 
 please.wait: Lütfen Bekleyin...
@@ -84,8 +90,12 @@ save_new:
         legend.tooltip: >
             Kopyalanan nesne için isim giriniz. Orjinal adını korumak için boş bırakın. You can insert original object id or name by using: \{\{id\}\} or \{\{name\}\}.
 import:
+    action:
+        new: Yeni
+        convert: Dönüştür
     dialog:
         title: Nesne içe aktarılıyor
+        description_warning: Converting current objects on import with new ones is still experimental and might lead to loss of data. There also might be a situation when differences between current object version and imported one will lead to unavoidable data loss. It is strongly recommended to backup your database before continuing 
         message.imported: Nesne içe aktarıldı
     fieldset:
         legend.tooltip: Daha önce dışa aktarılmış dosyadan yeni nesneler içe aktarın.
@@ -93,6 +103,8 @@ import:
         field:
             file: Dosya
             file.tooltip: İçeri aktarılacak dosyayı seçin
+            instructions: Instructions
+            instructions.tooltip: "Import instructions. When renaming you can insert some variables to new name such as: <b>\\{\\{name\\}\\}, \\{\\{id\\}\\}, \\{\\{user_username\\}\\}, \\{\\{user_id\\}\\}</b> for imported object name, imported object id, imported object owner user name and imported object owner id respectively."
 
 export:
     dialog:
