--- a/src/Concerto/PanelBundle/Resources/translations/panel.tr_TR.yml
+++ b/src/Concerto/PanelBundle/Resources/translations/panel.tr_TR.yml
@@ -68,7 +68,7 @@ dialog:
     failed: Çalıştırılamadı. Verinizi doğrulayın ve tekrar deneyin.
     saved: Nesne kaydedildi
     confirm.delete: Seçili nesne(leri) silmek istediğinizden emin misiniz?
-    confirm.unsafe_import: There are unsafe imports planned which might lead to data loss. It is strongly recommended to back up your database before continuing. Do you want to continue?
+    confirm.unsafe_import: Veri kaybına neden olabilecek güvenli olmayan bir içe aktarma planladınız. Devam etmeden önce veritabanınızın yedeğini almanızı önemle öneririz. Devam etmek istiyor musunuz?
     leaving: Devam etmek istediğinizden emin misiniz? Kaydetmediğiniz veriler kaybolabilir.
 
 please.wait: Lütfen Bekleyin...
@@ -88,14 +88,14 @@ save_new:
         message.copied: Nesne kopyalandı
     fieldset:
         legend.tooltip: >
-            Kopyalanan nesne için isim giriniz. Orjinal adını korumak için boş bırakın. You can insert original object id or name by using: \{\{id\}\} or \{\{name\}\}.
+            Kopyalanan nesne için isim giriniz. Orjinal adını korumak için boş bırakın. Orjinal object id ya da ismini: \{\{id\}\} veya \{\{name\}\} ile girebilirsiniz.
 import:
     action:
         new: Yeni
         convert: Dönüştür
     dialog:
         title: Nesne içe aktarılıyor
-        description_warning: Converting current objects on import with new ones is still experimental and might lead to loss of data. There also might be a situation when differences between current object version and imported one will lead to unavoidable data loss. It is strongly recommended to backup your database before continuing 
+        description_warning: İçe aktarımdaki güncel nesneleri yenileriyle dönüştürme işlemi henüz deneysel olarak çalışmaktadır ve veri kaybına neden olabilir. Ayrıca şimdiki nesne sürümü ve içe aktarıla arasındaki farklarla ilgili kaçınılmaz bir veri kaybı yaşanabilir. Devam etmeden önce lütfen veritabanınızı yedekleyiniz.
         message.imported: Nesne içe aktarıldı
     fieldset:
         legend.tooltip: Daha önce dışa aktarılmış dosyadan yeni nesneler içe aktarın.
@@ -103,8 +103,8 @@ import:
         field:
             file: Dosya
             file.tooltip: İçeri aktarılacak dosyayı seçin
-            instructions: Instructions
-            instructions.tooltip: "Import instructions. When renaming you can insert some variables to new name such as: <b>\\{\\{name\\}\\}, \\{\\{id\\}\\}, \\{\\{user_username\\}\\}, \\{\\{user_id\\}\\}</b> for imported object name, imported object id, imported object owner user name and imported object owner id respectively."
+            instructions: Talimatlar
+            instructions.tooltip: "Talimatları içe aktar. Yeniden adlandırma esnasında değişkenlerde: <b>\\{\\{name\\}\\}, \\{\\{id\\}\\}, \\{\\{user_username\\}\\}, \\{\\{user_id\\}\\}</b> sırasıyla içe aktarılan nesne adı, içe akdarılan nesne id'si, içe aktarılan nesnenin sahip kullanıcı adı ve id'sini ekleyebilirsiniz"
 
 export:
     dialog:
